oneplus5: Disable unnecessary configs and reconfigure HZ
Signed-off-by: ederekun <sedrickvince@gmail.com>

--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -44,9 +44,7 @@ CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODULES is not set
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_CFQ_GROUP_IOSCHED=y
@@ -58,7 +56,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_QCOM_TLB_EL2_HANDLER=y
 CONFIG_PREEMPT=y
-CONFIG_HZ_1000=y
+CONFIG_HZ_100=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
@@ -333,17 +331,7 @@ CONFIG_RNDIS_IPA=y
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_PPP=y
-CONFIG_PPP_BSDCOMP=y
-CONFIG_PPP_DEFLATE=y
-CONFIG_PPP_FILTER=y
-CONFIG_PPP_MPPE=y
-CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=y
-CONFIG_PPPOL2TP=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
-CONFIG_PPP_ASYNC=y
+# CONFIG_PPP is not set
 CONFIG_USB_RTL8150=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_LAN78XX=y
@@ -664,7 +652,6 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=5
 # CONFIG_SCHED_DEBUG is not set
