--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -455,6 +455,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FB_MSM_MDSS_FLICKER_FREE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_PCI is not set
