oneplus5: Disable IOSCHED_NOOP
Signed-off-by: ederekun <sedrickvince@gmail.com>

--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -48,6 +48,7 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 # CONFIG_MODULES is not set
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_BFQ is not set
 CONFIG_DEFAULT_CFQ=y
