--- a/arch/arm64/configs/op5-perf_defconfig
+++ b/arch/arm64/configs/op5-perf_defconfig
@@ -146,6 +146,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
+CONFIG_CGROUP_BPF=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
 CONFIG_SCHED_HMP_CSTATE_AWARE=y
@@ -184,6 +185,7 @@ CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
+CONFIG_BPF_SYSCALL=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
@@ -790,6 +792,7 @@ CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
 #
@@ -1002,6 +1005,7 @@ CONFIG_CLS_U32_MARK=y
 # CONFIG_NET_CLS_RSVP is not set
 # CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_BPF=y
 # CONFIG_NET_CLS_CGROUP is not set
 # CONFIG_NET_CLS_BPF is not set
 # CONFIG_NET_CLS_FLOWER is not set
@@ -1022,6 +1026,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_ACT_PEDIT is not set
 # CONFIG_NET_ACT_SIMP is not set
 CONFIG_NET_ACT_SKBEDIT=y
+CONFIG_NET_ACT_BPF=y
 # CONFIG_NET_ACT_CSUM is not set
 # CONFIG_NET_ACT_VLAN is not set
 # CONFIG_NET_ACT_BPF is not set
@@ -1040,6 +1045,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
+CONFIG_BPF_JIT=y
 CONFIG_RMNET_DATA_DEBUG_PKT=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
