--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -565,6 +565,8 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=160
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=250
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_QCA_CLD_WLAN=y
